k8s/prod/svc.yaml
# 配置负载均衡服务
apiVersion: v1
kind: Service
metadata:
  name: game
  labels:
    app: game
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8083
  selector:
    app: game
